lustrefs-exporter/src/snapshots/lustrefs_exporter__tests__client_stats.snap
---
source: lustrefs-exporter/src/main.rs
expression: x
---
# HELP lustre_client_stats Lustre client interface stats.
# TYPE lustre_client_stats counter
lustre_client_stats{operation="read_bytes",target="exafs-ffff9239aa0c4800"} 82152
lustre_client_stats{operation="write_bytes",target="exafs-ffff9239aa0c4800"} 2726169
lustre_client_stats{operation="read",target="exafs-ffff9239aa0c4800"} 82150
lustre_client_stats{operation="write",target="exafs-ffff9239aa0c4800"} 2726169
lustre_client_stats{operation="ioctl",target="exafs-ffff9239aa0c4800"} 50690
lustre_client_stats{operation="open",target="exafs-ffff9239aa0c4800"} 82098
lustre_client_stats{operation="close",target="exafs-ffff9239aa0c4800"} 82098
lustre_client_stats{operation="mmap",target="exafs-ffff9239aa0c4800"} 2763
lustre_client_stats{operation="page_fault",target="exafs-ffff9239aa0c4800"} 70393
lustre_client_stats{operation="seek",target="exafs-ffff9239aa0c4800"} 80982
lustre_client_stats{operation="fsync",target="exafs-ffff9239aa0c4800"} 1734
lustre_client_stats{operation="readdir",target="exafs-ffff9239aa0c4800"} 26398
lustre_client_stats{operation="setattr",target="exafs-ffff9239aa0c4800"} 1100
lustre_client_stats{operation="truncate",target="exafs-ffff9239aa0c4800"} 202
lustre_client_stats{operation="getattr",target="exafs-ffff9239aa0c4800"} 632721
lustre_client_stats{operation="link",target="exafs-ffff9239aa0c4800"} 6
lustre_client_stats{operation="unlink",target="exafs-ffff9239aa0c4800"} 22512
lustre_client_stats{operation="symlink",target="exafs-ffff9239aa0c4800"} 18
lustre_client_stats{operation="mkdir",target="exafs-ffff9239aa0c4800"} 7547
lustre_client_stats{operation="rmdir",target="exafs-ffff9239aa0c4800"} 4348
lustre_client_stats{operation="mknod",target="exafs-ffff9239aa0c4800"} 38461
lustre_client_stats{operation="rename",target="exafs-ffff9239aa0c4800"} 16394
lustre_client_stats{operation="statfs",target="exafs-ffff9239aa0c4800"} 40793
lustre_client_stats{operation="getxattr",target="exafs-ffff9239aa0c4800"} 499
lustre_client_stats{operation="getxattr_hits",target="exafs-ffff9239aa0c4800"} 291
lustre_client_stats{operation="listxattr",target="exafs-ffff9239aa0c4800"} 12
lustre_client_stats{operation="inode_permission",target="exafs-ffff9239aa0c4800"} 8318567
lustre_client_stats{operation="fallocate",target="exafs-ffff9239aa0c4800"} 196
lustre_client_stats{operation="opencount",target="exafs-ffff9239aa0c4800"} 82130
lustre_client_stats{operation="openclosetime",target="exafs-ffff9239aa0c4800"} 38877
lustre_client_stats{operation="write_bytes",target="exatest-ffff923a1497d800"} 204800
lustre_client_stats{operation="write",target="exatest-ffff923a1497d800"} 204800
lustre_client_stats{operation="ioctl",target="exatest-ffff923a1497d800"} 74
lustre_client_stats{operation="open",target="exatest-ffff923a1497d800"} 200
lustre_client_stats{operation="close",target="exatest-ffff923a1497d800"} 200
lustre_client_stats{operation="fsync",target="exatest-ffff923a1497d800"} 100
lustre_client_stats{operation="truncate",target="exatest-ffff923a1497d800"} 100
lustre_client_stats{operation="getattr",target="exatest-ffff923a1497d800"} 445
lustre_client_stats{operation="mkdir",target="exatest-ffff923a1497d800"} 1
lustre_client_stats{operation="mknod",target="exatest-ffff923a1497d800"} 100
lustre_client_stats{operation="statfs",target="exatest-ffff923a1497d800"} 41036
lustre_client_stats{operation="inode_permission",target="exatest-ffff923a1497d800"} 7212
lustre_client_stats{operation="fallocate",target="exatest-ffff923a1497d800"} 100
lustre_client_stats{operation="opencount",target="exatest-ffff923a1497d800"} 201
lustre_client_stats{operation="openclosetime",target="exatest-ffff923a1497d800"} 100

# HELP lustre_drop_bytes_total Total number of bytes that have been dropped
# TYPE lustre_drop_bytes_total counter
lustre_drop_bytes_total 0

# HELP lustre_drop_count_total Total number of messages that have been dropped
# TYPE lustre_drop_count_total counter
lustre_drop_count_total{nid="0@lo"} 0
lustre_drop_count_total{nid="172.18.2.101@o2ib"} 0

# HELP lustre_health_healthy Indicates whether the Lustre target is healthy or not. 1 is healthy, 0 is unhealthy.
# TYPE lustre_health_healthy gauge
lustre_health_healthy 1

# HELP lustre_ldlm_cbd_stats Gives information about LDLM Callback service.
# TYPE lustre_ldlm_cbd_stats counter
lustre_ldlm_cbd_stats{operation="req_waittime"} 275530
lustre_ldlm_cbd_stats{operation="req_qdepth"} 275530
lustre_ldlm_cbd_stats{operation="req_active"} 275530
lustre_ldlm_cbd_stats{operation="req_timeout"} 275530
lustre_ldlm_cbd_stats{operation="reqbuf_avail"} 556804
lustre_ldlm_cbd_stats{operation="ldlm_bl_callback"} 238503
lustre_ldlm_cbd_stats{operation="ldlm_cp_callback"} 36972
lustre_ldlm_cbd_stats{operation="ldlm_gl_callback"} 55

# HELP lustre_lnet_mem_used Gives information about Lustre LNet memory usage.
# TYPE lustre_lnet_mem_used gauge
lustre_lnet_mem_used 178729063

# HELP lustre_mem_used Gives information about Lustre memory usage.
# TYPE lustre_mem_used gauge
lustre_mem_used 72132771

# HELP lustre_mem_used_max Gives information about Lustre maximum memory usage.
# TYPE lustre_mem_used_max gauge
lustre_mem_used_max 10924287079

# HELP lustre_receive_bytes_total Total number of bytes that have been received
# TYPE lustre_receive_bytes_total counter
lustre_receive_bytes_total 3943753915256

# HELP lustre_receive_count_total Total number of messages that have been received
# TYPE lustre_receive_count_total counter
lustre_receive_count_total{nid="0@lo"} 0
lustre_receive_count_total{nid="172.18.2.101@o2ib"} 39769486

# HELP lustre_send_bytes_total Total number of bytes that have been sent
# TYPE lustre_send_bytes_total counter
lustre_send_bytes_total 6673532934057

# HELP lustre_send_count_total Total number of messages that have been sent
# TYPE lustre_send_count_total counter
lustre_send_count_total{nid="0@lo"} 0
lustre_send_count_total{nid="172.18.2.101@o2ib"} 33503282
