lustrefs-exporter/src/snapshots/lustrefs_exporter__tests__osc_states_otel.snap
---
source: lustrefs-exporter/src/lib.rs
expression: stats
---
# HELP lustre_osc_state Lustre OSC connection state.
# TYPE lustre_osc_state gauge
lustre_osc_state{controller="fs-OST0000-osc-MDT0000",current_state="FULL"} 1
lustre_osc_state{controller="fs-OST0000-osc-ffff8d639e4f0800",current_state="CONNECTING"} 0
lustre_osc_state{controller="fs-OST0001-osc-MDT0000",current_state="IDLE"} 1
# EOF
