lustrefs-exporter/src/snapshots/lustrefs_exporter__tests__valid_fixture_otel@params-6.2.0-r9.txt.snap
---
source: lustrefs-exporter/src/lib.rs
expression: x
input_file: lustre-collector/src/fixtures/valid/params-6.2.0-r9.txt
---
# HELP lustre_health_healthy Indicates whether the Lustre server is healthy or not. 1 is healthy, 0 is unhealthy.
# TYPE lustre_health_healthy gauge
lustre_health_healthy{} 0
# HELP lustre_lnet_mem_used Gives information about Lustre LNet memory usage.
# TYPE lustre_lnet_mem_used gauge
lustre_lnet_mem_used{} 67130162
# HELP lustre_mem_used Gives information about Lustre memory usage.
# TYPE lustre_mem_used gauge
lustre_mem_used{} 243927005
# HELP lustre_mem_used_max Gives information about Lustre maximum memory usage.
# TYPE lustre_mem_used_max counter
lustre_mem_used_max{} 245019901
# HELP lustre_ldlm_canceld_stats Gives information about LDLM Canceld service.
# TYPE lustre_ldlm_canceld_stats counter
lustre_ldlm_canceld_stats{operation="ldlm_cancel"} 978
lustre_ldlm_canceld_stats{operation="req_active"} 978
lustre_ldlm_canceld_stats{operation="req_qdepth"} 978
lustre_ldlm_canceld_stats{operation="req_timeout"} 978
lustre_ldlm_canceld_stats{operation="req_waittime"} 978
lustre_ldlm_canceld_stats{operation="reqbuf_avail"} 1974
# HELP lustre_ldlm_cbd_stats Gives information about LDLM Callback service.
# TYPE lustre_ldlm_cbd_stats counter
lustre_ldlm_cbd_stats{operation="ldlm_bl_callback"} 134
lustre_ldlm_cbd_stats{operation="req_active"} 134
lustre_ldlm_cbd_stats{operation="req_qdepth"} 134
lustre_ldlm_cbd_stats{operation="req_timeout"} 134
lustre_ldlm_cbd_stats{operation="req_waittime"} 134
lustre_ldlm_cbd_stats{operation="reqbuf_avail"} 277
# HELP lustre_inodes_free The number of inodes (objects) available.
# TYPE lustre_inodes_free gauge
lustre_inodes_free{component="mdt",target="fs-MDT0000"} 1885250
lustre_inodes_free{component="mgt",target="MGS"} 32555
lustre_inodes_free{component="ost",target="fs-OST0000"} 40134
lustre_inodes_free{component="ost",target="fs-OST0001"} 40134
# HELP lustre_inodes_maximum The maximum number of inodes (objects) the filesystem can hold.
# TYPE lustre_inodes_maximum gauge
lustre_inodes_maximum{component="mdt",target="fs-MDT0000"} 1885696
lustre_inodes_maximum{component="mgt",target="MGS"} 32768
lustre_inodes_maximum{component="ost",target="fs-OST0000"} 40960
lustre_inodes_maximum{component="ost",target="fs-OST0001"} 40960
# HELP lustre_available_kilobytes Number of kilobytes readily available in the pool.
# TYPE lustre_available_kilobytes gauge
lustre_available_kilobytes{component="mdt",target="fs-MDT0000"} 2365504
lustre_available_kilobytes{component="mgt",target="MGS"} 463060
lustre_available_kilobytes{component="ost",target="fs-OST0000"} 4037332
lustre_available_kilobytes{component="ost",target="fs-OST0001"} 4037332
# HELP lustre_free_kilobytes Number of kilobytes allocated to the pool.
# TYPE lustre_free_kilobytes gauge
lustre_free_kilobytes{component="mdt",target="fs-MDT0000"} 2599612
lustre_free_kilobytes{component="mgt",target="MGS"} 489272
lustre_free_kilobytes{component="ost",target="fs-OST0000"} 4106144
lustre_free_kilobytes{component="ost",target="fs-OST0001"} 4106144
# HELP lustre_capacity_kilobytes Capacity of the pool in kilobytes.
# TYPE lustre_capacity_kilobytes gauge
lustre_capacity_kilobytes{component="mdt",target="fs-MDT0000"} 2602832
lustre_capacity_kilobytes{component="mgt",target="MGS"} 491092
lustre_capacity_kilobytes{component="ost",target="fs-OST0000"} 4108388
lustre_capacity_kilobytes{component="ost",target="fs-OST0001"} 4108388
# HELP lustre_exports_total Total number of times the pool has been exported.
# TYPE lustre_exports_total gauge
lustre_exports_total{component="mdt",target="fs-MDT0000"} 32
lustre_exports_total{component="mgt",target="MGS"} 9
lustre_exports_total{component="ost",target="fs-OST0000"} 8
lustre_exports_total{component="ost",target="fs-OST0001"} 8
# HELP lustre_exports_dirty_total Total number of exports that have been marked dirty.
# TYPE lustre_exports_dirty_total gauge
lustre_exports_dirty_total{component="ost",target="fs-OST0000"} 0
lustre_exports_dirty_total{component="ost",target="fs-OST0001"} 0
# HELP lustre_exports_granted_total Total number of exports that have been marked granted.
# TYPE lustre_exports_granted_total gauge
lustre_exports_granted_total{component="ost",target="fs-OST0000"} 272832
lustre_exports_granted_total{component="ost",target="fs-OST0001"} 272832
# HELP lustre_exports_pending_total Total number of exports that have been marked pending.
# TYPE lustre_exports_pending_total gauge
lustre_exports_pending_total{component="ost",target="fs-OST0000"} 0
lustre_exports_pending_total{component="ost",target="fs-OST0001"} 0
# HELP lustre_lock_contended_total Number of contended locks.
# TYPE lustre_lock_contended_total gauge
lustre_lock_contended_total{component="mdt",target="fs-MDT0000"} 32
lustre_lock_contended_total{component="ost",target="fs-OST0000"} 32
lustre_lock_contended_total{component="ost",target="fs-OST0001"} 32
# HELP lustre_lock_contention_seconds_total Time in seconds during which locks were contended.
# TYPE lustre_lock_contention_seconds_total gauge
lustre_lock_contention_seconds_total{component="mdt",target="fs-MDT0000"} 2
lustre_lock_contention_seconds_total{component="ost",target="fs-OST0000"} 2
lustre_lock_contention_seconds_total{component="ost",target="fs-OST0001"} 2
# HELP lustre_connected_clients Number of connected clients.
# TYPE lustre_connected_clients gauge
lustre_connected_clients{component="mdt",target="fs-MDT0000"} 1
# HELP lustre_lock_count_total Number of locks.
# TYPE lustre_lock_count_total gauge
lustre_lock_count_total{component="mdt",target="fs-MDT0000"} 99
lustre_lock_count_total{component="ost",target="fs-OST0000"} 0
lustre_lock_count_total{component="ost",target="fs-OST0001"} 0
# HELP lustre_lock_timeout_total Number of lock timeouts.
# TYPE lustre_lock_timeout_total counter
lustre_lock_timeout_total{component="mdt",target="fs-MDT0000"} 0
lustre_lock_timeout_total{component="ost",target="fs-OST0000"} 0
lustre_lock_timeout_total{component="ost",target="fs-OST0001"} 0
# HELP lustre_oss_ost_stats OSS ost stats.
# TYPE lustre_oss_ost_stats gauge
lustre_oss_ost_stats{operation="obd_ping",units="usec"} 8
lustre_oss_ost_stats{operation="ost_connect",units="usec"} 60
lustre_oss_ost_stats{operation="ost_create",units="usec"} 32
lustre_oss_ost_stats{operation="ost_disconnect",units="usec"} 2
lustre_oss_ost_stats{operation="ost_get_info",units="usec"} 16
lustre_oss_ost_stats{operation="req_active",units="reqs"} 118
lustre_oss_ost_stats{operation="req_qdepth",units="reqs"} 118
lustre_oss_ost_stats{operation="req_timeout",units="sec"} 118
lustre_oss_ost_stats{operation="req_waittime",units="usec"} 118
lustre_oss_ost_stats{operation="reqbuf_avail",units="bufs"} 247
# HELP lustre_oss_ost_create_stats OSS ost_create stats.
# TYPE lustre_oss_ost_create_stats gauge
lustre_oss_ost_create_stats{operation="ost_statfs",units="usec"} 21644
lustre_oss_ost_create_stats{operation="req_active",units="reqs"} 21644
lustre_oss_ost_create_stats{operation="req_qdepth",units="reqs"} 21644
lustre_oss_ost_create_stats{operation="req_timeout",units="sec"} 21644
lustre_oss_ost_create_stats{operation="req_waittime",units="usec"} 21644
lustre_oss_ost_create_stats{operation="reqbuf_avail",units="bufs"} 43782
# HELP lustre_stats_total Number of operations the filesystem has performed.
# TYPE lustre_stats_total counter
lustre_stats_total{component="mdt",operation="getattr",target="fs-MDT0000"} 4
lustre_stats_total{component="mdt",operation="statfs",target="fs-MDT0000"} 9466
# HELP lustre_stats_time_min Minimum time taken for an operation in microseconds.
# TYPE lustre_stats_time_min gauge
lustre_stats_time_min{component="mdt",operation="getattr",target="fs-MDT0000"} 0
lustre_stats_time_min{component="mdt",operation="statfs",target="fs-MDT0000"} 0
# HELP lustre_stats_time_max Maximum time taken for an operation in microseconds.
# TYPE lustre_stats_time_max gauge
lustre_stats_time_max{component="mdt",operation="getattr",target="fs-MDT0000"} 103
lustre_stats_time_max{component="mdt",operation="statfs",target="fs-MDT0000"} 225
# HELP lustre_stats_time_total Total time taken for an operation in microseconds.
# TYPE lustre_stats_time_total gauge
lustre_stats_time_total{component="mdt",operation="getattr",target="fs-MDT0000"} 195
lustre_stats_time_total{component="mdt",operation="statfs",target="fs-MDT0000"} 117415
# EOF
